# doc

./: .gitignore  .gitmodules  Doxyfile  README.rst  build.sh  conf.py  dev_server.sh  genindex.html  index.html  index.rst  monitor.sh  objects.inv  search.html  searchindex.js
.github/actions/build-doc/: Dockerfile  action.yml  build.sh  create-site.py  download_releases.py
.github/actions/build-doc/snippets/: canonical.html  dev-header.html  index.html  old-release-header.html  versions.html
.github/workflows/: build.yml
_static/: documentation_options.js  synaptics_theme.css
_static/css/: synaptics.css
_static/js/: synaptics.js
_templates/: versions.html
manual/: 00-introduction.md  01-getting_started.md  01-inference.md  02-model_compilation.md  03-conversion_metafile.md  04-model_quantization.md  benchmark.md  benchmark.rst  conf.py  framework_api.md  framework_api.md-wip  framework_api.rst  getting_started.rst  index.rst  inference.md  introduction.md  introduction.rst  java.md  java.rst  jit_compilation.md  metadata.yml  nnapi.md  nnapi.rst  npu_operators.md  npu_operators.rst  optimizing_models.md  statistics.md  statistics.rst  synap_installation.md  test.md  working_with_models.md  working_with_models.rst
manual/benchmark/: test_report_vs640_aibench4.rst  test_report_vs640_aibench5.rst  test_report_vs640_open.rst  test_report_vs640_synaptics.rst  test_report_vs680_aibench4.rst  test_report_vs680_aibench5.rst  test_report_vs680_open.rst  test_report_vs680_synaptics.rst
manual/op-support/: activation-operations.txt  basic-operations.txt  elementwise-operations.txt  miscellaneous-operations.txt  normalizaton-operations.txt  pooling-operations.txt  reshape-operations.txt  rnn-operations.txt
release_notes/: index.rst  metadata.yml
tutorials/: index.rst
tutorials/heterogeneous_inference/: CMakeLists.txt  body.rst  conf.py  index.rst  metadata.yml
tutorials/model_import/: CMakeLists.txt  Doxyfile  conf.py  index.rst  introduction.rst  metadata.yml  workflow.rst
v/3.0.0/: genindex.html  index.html  search.html  searchindex.js
v/3.0.0/docs/manual/: .buildinfo  benchmark.html  framework_api.html  genindex.html  getting_started.html  index.html  introduction.html  java.html  nnapi.html  npu_operators.html  objects.inv  search.html  searchindex.js  statistics.html  working_with_models.html
v/3.0.0/docs/release_notes/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v/3.0.0/docs/tutorial_heterogeneous_inference/: .buildinfo  body.html  genindex.html  index.html  (+2 more)
v/3.1.0/: genindex.html  index.html  objects.inv  search.html
v/3.1.0/_static/: synaptics_theme.css
(+42 files in other folders)
